force-app/main/default/objects/Integration_Credentials__c/Integration_Credentials__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store all the integration related credentials in secure encrypted way.</description>
    <label>Integration Credentials</label>
    <nameField>
        <label>Integration Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>