force-app/main/default/objects/Integration_Credentials__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Stores the Account Id that is being used by NewCrop integration.</description>
    <label>Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>