force-app/main/default/objects/Integration_Credentials__c/fields/Callout_Limit__c.field-meta.xml
<CustomField>
    <fullName>Callout_Limit__c</fullName>
    <label>Callout Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>