force-app/main/default/objects/Integration_Credentials__c/fields/Elixir_Active__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fields Contains If the Credentials Are Active Or Not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>