force-app/main/default/objects/Integration_Credentials__c/fields/Elixir_VFPAGE_EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>Elixir_VFPAGE_EndPointURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Elixir_VFPAGE_EndPointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>