force-app/main/default/objects/Integration_Credentials__c/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <description>This field will hold the endpoint URL.</description>
    <label>EndPointURL</label>
    <type>Url</type>
</CustomField>