force-app/main/default/objects/Integration_Credentials__c/fields/Integration_Services__c.field-meta.xml
<CustomField>
    <fullName>Integration_Services__c</fullName>
    <description>This field will indicate to which integration the record belongs.</description>
    <label>Integration Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHC</fullName>
            </value>
            <value>
                <fullName>NewCrop</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>ClaimMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>