force-app/main/default/objects/Integration_Credentials__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>Stores the partner name for NewCrop integration data.</description>
    <label>Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>