force-app/main/default/objects/Integration_Credentials__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Stores the product name for NewCrop integration data.</description>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>