force-app/main/default/objects/Integration_Credentials__c/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <description>Stores the product version for NewCrop integration data.</description>
    <label>Product Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>