force-app/main/default/objects/Integration_Credentials__c/fields/Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Key__c</fullName>
    <description>Field to store the Authorize  Transaction Key</description>
    <label>Transaction Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>