force-app/main/default/objects/Integration_Credentials__c/fields/XML_Payload__c.field-meta.xml
<CustomField>
    <fullName>XML_Payload__c</fullName>
    <label>XML Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>