force-app/main/default/objects/Integration_Credentials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Services__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>